data/derived/comb/progs/unify/prog5934.ml.out
Characters 56-75:
  else 55 :: digitsOfInt n;;
       ^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a list
       but an expression was expected of type int
